# mess2_uav

./: README.md
hawk_calibration/: CMakeLists.txt  README.md  package.xml
hawk_calibration/launch/: fake.launch.py  mess2.launch.py
hawk_calibration/src/: client.cpp  client_fake.cpp  server.cpp
hawk_control/: CMakeLists.txt  package.xml
hawk_control/launch/: px4.launch.py  uav.launch.py
hawk_control/src/: offboard.cpp
